finish 2011.html, add 2 speakers, and add cider to sponsors

--- a/2011.html
+++ b/2011.html
@@ -59,12 +59,12 @@
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers_kjt.png" class="img-circle center-block">
+            <img src="./images/speakers/2011/speakers_shj.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
             <h3>송호준</h3>
-            <p>POSTECH 창의IT융합공학과의 김진택 교수님은 철학과 이미지, 매체미학을 전공하시고 파리 1대학(팡테옹 소르본 대학)에서 박사학위를 받으셨습니다. 항상 몸과 감각을 중심으로 사유하시며, 이미지와 미디어 아트, 트랜스휴먼을 주로 연구하고 계십니다.</p>
-            <p>인간과 기술은 항상 서로 상호작용하며 진화해왔습니다. 이제 인류는 기술을 어떻게 이해하고 대면할 건인지에 대해 고민하는 중대한 시점에 있습니다. 과연 공학적 기술은 도구적인 효율성만을 추구하는 것일까요? 우리는 기술을 어떻게 이해해야 할까요? 이번 강연에서는 인간의 기억과 매체라는 개념과 성장통을 겪는 인간의 개념을 통해 기술, 인간, 사회, 그리고 문화에 대해 통찰하는 시간을 가져보고자 합니다.</p>
+            <p>송호준 작가님은 고려대 전기전자전파공학부를 졸업한 미디어아트 작가로, 초창기에는 미디어아트와 관련된 작품을 선보였습니다. 이후, 대전에 있는 우주항공 전문기업 “쎄트렉아이’에서 1년 남짓 인턴을 하셨고, 2013년 4월 19일 카자흐스탄 발사기지에서 가로 10cm, 세로 10cm의 조그마한 개인위성을 쏘아 올렸습니다. 위성을 제작하는 데 필요한 설계도를 공개하며, 과학의 대중화를 이끌고 계십니다.</p>
+            <p>하고 싶은 대로 해본 적 있나요? 여기, 밤하늘에 나만의 별을 갖고 싶다고 생각한 사람이 있습니다. 송호준 작가님은 ‘개인은 인공위성을 쏠 수 없을까?’라는 물음을 바탕으로 오픈 소스 인공위성 프로젝트를 진행하고 계십니다. 접근하기 힘든 인공위성 발사 과정을 오픈소스로 제공하는 작가님은, ‘무언가 이루겠다고 정해놓지 마세요. 자기가 하고 싶은 것, 재미있는 것을 먼저 찾아서 시작해 보세요’ 라고 말합니다. ‘Doer’ 송호준의 이야기, 다 함께 나눠볼까요?</p>
           </div>
         </div>
 
@@ -78,12 +78,12 @@
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers_csy.jpg" class="img-circle center-block">
+            <img src="./images/speakers/2011/speakers_hjh.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
             <h3>현재호</h3>
-            <p>최서윤 잉집장님은 &lt월간잉여&gt의 편집장으로 활동하고 계십니다. 또한 한겨레21, 시사인, 한국일보, 미디어 오늘의 필진으로 참여하셨습니다. 캠퍼스씨네21에서는 &lt내 친구의 자취집은 어디인가&gt를 연재하셨고, 온라인 커뮤니티인 <a href="http://ingchu.com" target="_blank">여잉추</a>와 페이스북 페이지 <a href="https://www.facebook.com/geojeol" target="_blank">거잘잘받</a>를 운영하고 계십니다.</p>
-            <p>명확한 정체성을 가진, '쓸모'를 증명하는 이들을 요구하는 현재의 시스템 속에서, 그에 해당하지 않는 '잉여' 는 환영받지 못합니다. 잉여의, 잉여에 의한, 잉여를 위한 잡지 &lt월간잉여&gt 또한 마찬가지입니다. 언론과 문화예술의 경계에서 모호한 정체성을 가지는 이 잡지가 '생존'하기 위해서 그 동안 어떤 시도를 해왔을까요? 어쩌면 세상과의 연결고리가 그 답이 될 수 있을까요? 이번 강연에서는 최서윤 잉집장님의 이런 고민과, 그 결론으로 도출된 프로젝트 들을 소개합니다.</p>
+            <p>현재호 이사님은, 1992년 한국과학기술원에서 경영과학 박사를 받으신 이후 과학기술정책연구소 연구개발정책실장, 과학기술평가원 연구위원, ㈜기술과가치 공동대표이사직을 거쳐 ㈜테크노베이션파트너스 대표이사로 활동하고 계십니다. 창조적이며 재능 있는 인력을 발굴하여 최고의 기술경영 전문컨설턴트로 키우는 것을 추구하고 계십니다.</p>
+            <p>모두가 창조와 혁신을 외치는 시대, 창조적 혁신은 가장 올바른 답으로 여겨지곤 합니다. 하지만 우리는 올바른 답을 향해 나아가고 있을까요? 창조적 혁신은 어떻게 하는 것일까요? 현재호 이사님께서는, 창조적 전략을 수립하기 위해서는 몇 가지 요소가 필요하다고 말씀하십니다. 이공계 학생들에게 전하는 창조적 혁신의 열쇠, 지금 함께 만나볼까요?</p>
           </div>
         </div>
 
@@ -97,12 +97,12 @@
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers_psj.png" class="img-circle center-block">
+            <img src="./images/speakers/2011/speakers_ayi.png" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
             <h3>안영일</h3>
-            <p>POSTECH 기계공학과 박성진 교수님은 본교 1회 수석졸업 후 학계, 산업계에서 활발한 활동을 펼치다 2009년 본교에 부임하셨습니다. 현재 미세분말 사출성형의 응용과 이와 관련한 시뮬레이션 연구를 진행 중이시며, 포스텍 기술지주회사의 CEO이시기도 합니다.</p>
-            <p>앞으로의 인생에 막막함을 느껴보신 적이 있나요? 대학을 졸업하면 무엇을 하고 살아가야 할까요? 박성진 교수님은 이번 강연에서 우리가 자신의 길을 스스로 만들어 갈 수 있도록 가이드라인을 제시해 주시고자 합니다. 나의 길을 선택할 때는 어떤 요소를 고려해야 하는지, 나의 정체성과 비전을 가지는 것이 왜 중요한지, 긍정적인 정체성을 키우기 위한 방법에는 어떤 것이 있는지, 우리 모두가 갖고 있는 고민에 대해 선배님의 이야기를 들어보는 것은 어떨까요?</p>
+            <p>안영일 대표님은 포항공과대학교 산업경영공학과를 졸업하시고, IBM Korea IT서비스 영업 및 컨설팅 팀을 거쳐 DCG 그룹(Dream Challenge Group)의 CEO이자, 대표에너지 아티스트로 활동하고 계십니다. 뮤지컬 ‘사무라이 컴백 투 비보이’ 무대 연출 및 시각디자인을 맡으셨고, 2014년 동아일보 선정 10년 뒤 한국을 빛낼 위인 100인에 선정되셨습니다. 항상 새롭게 도전하고, ‘Why?’ 라는 질문을 끊임없이 던지면서 자신의 방향을 만들어가고 계십니다.</p>
+            <p>인간은 꿈을 꾸는 존재입니다. 과거를 후회하고, 미래를 준비하며 오늘을 살아가는 존재입니다. 당신의 꿈은 무엇인가요? 우리는 미래에 어떻게 될까요? 여기 새로운 출발을 준비하는 사람들에게는 용기를, 방향을 잃은 사람들에게는 ‘너 하고 싶은 대로 하고 살아라!’ 고 자신 있게 말하는 행동가가 있습니다. 이번 강연에서는 그 깨달음의 기쁨을 함께 느끼는 시간을 갖고자 합니다.</p>
           </div>
         </div>
 
@@ -116,12 +116,12 @@
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers_hjc.jpg" class="img-circle center-block">
+            <img src="./images/speakers/2011/speakers_bsg.png" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
             <h3>백성기</h3>
-            <p>황재찬 교수님은 서울대학교 천문학과를 졸업하시고, 텍사스 대학에서 천문학 박사학위를 받으셨습니다. 교수님께서는 현재 경북대학교 천문대기과학과 교수로 재직하고 계시며, 우주론, 우주생물학과 인간의 미래에 대해 주로 관심을 가지고 계십니다.</p>
-            <p>우리는 왜 우주를 탐구하는 것일까요? 황재찬 교수님은 이 질문에 답하기 위해 먼저 천문학의 탐구 방식인 '과학'에 대해 알아야 한다고 하십니다. 사실 과학이 채택한 탐구 방식은 자연과는 거리가 먼, 오히려 인간의 욕망이 반영된 방식에 가깝습니다. 그렇다면 우리는 이런 <abbr title="그리스 신화에 나오는 인물로, 지나가는 행인을 붙잡아 자신의 침대보다 길면 다리를 잘라내고 짧으면 몸을 억지로 늘려서 죽였다고 전해진다.">프로크루스테스</abbr> 방식으로 자연을 재단하고 오해하고 있는 것은 아닐까요? 이번 황재찬 교수님의 강연을 통해 우리는 과학의 '보이지 않는 목적'에 대한 진실을 살펴보고자 합니다.</p>
+            <p>백성기 교수님은, 1971년 서울대학교 금속공학과 학사, 1981년 코넬대학교 재료공학 박사 학위를 받으시고, 1986년 포항공과대학교 교수로 부임하신 이후 2007년 제5대 포항공과대학교 총장으로 재직하셨습니다. 국가교육과학기술자문회의 과학기술분야 위원장으로 활동하시며 한국 과학의 미래를 키우는 데 이바지하고 계십니다.</p>
+            <p>세계시장 속 한국은 어떤 모습일까요? 한국의 기존 성장동력은 고용 없는 성장을 계속하고 있으며, 한국 대학생들의 50%는 직업을 얻지 못하고 있습니다. 백성기 총장님께서는, 한국이 발전하기 위해서 Hardware, Software를 넘어선 특별한 것이 필요하다고 말씀하십니다. 그 특별한 “무엇”을 함께 찾아볼까요?</p>
           </div>
         </div>
 
@@ -135,12 +135,12 @@
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers_lsw.jpg" class="img-circle center-block">
+            <img src="./images/speakers/2011/speakers_gsn.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
             <h3>곽소나</h3>
-            <p>POSTECH 융합생명공학부 이승우 교수님은 POSTECH 생명과학과에서 학사, 석사, 박사를 마치셨습니다. 졸업 후 미국 라호야 면역학 연구소 연구원으로 계시다 2013년 POSTECH에 부임하셨습니다. 현재 우리 몸의 면역체계를 이용한 암 치료 관련 연구를 하고 계십니다.</p>
-            <p>평균수명 100세 시대를 앞두고 있는 현 시점에, 우리 사회가 직면한 가장 심각한 질병은 암입니다. 앞으로 거의 2명 중 한명이 암으로 사망할 것이라는 전망이 나오고 있는데요. 히포크라테스가 '생명체가 스스로 갖고 있는 치유력'이라고 한 '면역력'을 통해서 암을 극복할 수도 있을까요? 항암면역치료는 최근 벤처기업이 여럿 생기고 임상실험이 진행되는 등 생명과학계에서 가장 핫한 분야입니다. 이번 강연에서는 이승우 교수님께 항암면역치료의 가능성에 대해 들어봅니다.</p>
+            <p>곽소나 교수님은 이화여대 산업디자인전공/디자인학부 소속으로, KAIST 산업디자인학과에서 박사학위를 받으셨으며, 지능형 제품디자인과 인간-로봇 상호작용 디자인에 대한 연구를 진행하고 계씹니다. 2015년 제10회 ACM/IEEE 국제 인간-로봇 상호작용 학술대회 디자인위원장 등 국제학술대회 조직위원으로 활동하시며 인간과 로봇의 상호작용을 위해 힘쓰고 계십니다.</p>
+            <p>미래 사회에서 인류와 로봇은 어떤 관계를 맺게 될까요? 여기, 인류와 로봇의 상호작용을 통한 평화로운 공존을 주장하는 사람이 있습니다. 곽소나 교수님께서는 아이들에게 한글을 가르칠 수 있는 한글교육용 로봇을 개발하고, 욕설을 하면 몸체가 멍이 든 것처럼 파랗게 변했다가, 애정어린 말을 하면 붉은 색으로 변하는 로봇 등 따뜻한 감성을 전하는 로봇을 통해 Social Robot이라는 분야를 개척해 나가는 교수님의 미래 이야기, 함께 나눠볼까요?</p>
           </div>
         </div>
 
