--- a/organizers.html
+++ b/organizers.html
@@ -72,7 +72,7 @@
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/rkdwldn.jpg" class="img-circle center-block">
+              <img src="./images/organizers/2016/rladudco.jpg" class="img-circle center-block">
               <p class="center-block">김영채<br>EE 15</p>
             </div>
           </div>
@@ -99,7 +99,7 @@
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/dltldn.jpg" class="img-circle center-block">
+              <img src="./images/organizers/2016/dlaehdgus.jpg" class="img-circle center-block">
               <p class="center-block">임동현<br>ME 14</p>
             </div>
           </div>
