--- a/speakers.html
+++ b/speakers.html
@@ -49,21 +49,25 @@
     <div class="speakers">
       <div class="container">
 
-        <div class="row" id="comingsoon">
+        <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers/speakers_comingsoon.png" class="img-circle center-block">
+            <img src="./images/speakers/2016/speakers_lnh.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h1>Coming Soon! 2016/10/07</h1>
+            <h3>이남희</h3>
+            <p>스트레스 컴퍼니의 이남희 대표님은 한국예술종합학교 미술원 조형예술과를 졸업하시고, 사회적기업 노리단 에서 사회디자인팀 디자이너로 활동하셨습니다. 스트레스컴퍼니의 대표로, 사람들 사이의 스트레스를 부드럽게 해소하는 방법과 갈등을 방지할 수 있는 도구들을 즐겁게 실험하고 계십니다.</p>
+            <p>하루에도 수십 번씩 받는 스트레스. 당신을 괴롭히는 쓸모 없는 것이라 여기고 무조건 없애 버려야만 한다고 생각하신 적 있나요? 여기 본인의 스트레스를 해소하기 위해 스트레스컴퍼니 라는 회사를 만들고, 세상에 없던 상품들을 제작하며 스트레스를 자신의 삶에서 없어서는 안될 에너지로 바꾼 사람이 있습니다. 스트레스컴퍼니 이남희 대표님의 이야기를 통해 당신의 스트레스에 대해서 다시 한 번 생각해볼 수 있는 시간을 가져보고자 합니다.</p>
           </div>
         </div>
 
-        <div class="row" id="comingsoon">
+        <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers/speakers_comingsoon.png" class="img-circle center-block">
+            <img src="./images/speakers/2016/speakers_jjs.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h1>Coming Soon! 2016/10/07</h1>
+            <h3>조진수</h3>
+            <p>조진수 안무가님은 M.net 댄싱9 시즌3 , MBC 마이리틀텔레비전에 출연하셨고, M.net 힛더스테이지 콘셉트쇼에서 안무 연출과 댄스전문 패널을 맡으셨던 BLANK / PINKY CHEEKS 소속의 스트릿댄서이자 안무가 이십니다. 2015 한류 힙합문화대상 인기상을 수상하셨고, 남자의 몸으로 남성성과 여성성을 모두 표현하는 독창적인 예술적 가치를 추구하고 계십니다.</p>
+            <p>남자는 남성을 표현하고, 여자는 여성을 표현하는 것이 자연스럽게 여겨지던 시기가 있었습니다. 하지만 ‘자연스럽다’라는 인식 속에 우리는 남성과 여성을 각각의 틀 속에 가둬버린 것은 아닐까요? 여기 남자의 몸으로 남성과 여성을 모두 표현해내는 댄서가 있습니다. 남들과 다른 관점으로 예술적 가치에 다가가고, 극복했던 제이블랙/제이핑크의 경험을 함께 들으며 ‘틀’에 대한 생각을 나눌 수 있는 시간을 가져보고자 합니다.</p>
           </div>
         </div>
 
