--- a/register.html
+++ b/register.html
@@ -84,6 +84,9 @@
                 <td colspan="2">***TEDx talks는 초청된 연사들의 강연하는 시간을 의미.</td>
               </tr>
               <tr>
+                <td colspan="2">****After Party 참가비는 5,000원으로, 총학생회 정회원의 경우 무료입니다.</td>
+              </tr>
+              <tr>
                 <td colspan="2">****After Party는 C5 컨퍼런스 홀에서 진행되며 연사와 참가자간의 Q&A와 참가자간의 아이스브레이킹 등이 준비되어 있습니다.</td>
               </tr>
             </tfoot>
@@ -170,7 +173,7 @@
             </div>
 
             <h3>Regular Registration</h3>
-            <p>Regular 참가신청 비용은 예약 10,000원이며 현장 납입시 15,000원입니다. 신청은 10월 15일 밤 9시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
+            <p>Regular 참가신청 비용은 예약 10,000원입니다. 신청은 10월 15일 밤 9시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
             <p><a type="button" data-toggle="modal" data-target="#form" class="btn btn-primary" role="button" id="available">Register</a></p>
 
           </div>
