--- a/sponsors.html
+++ b/sponsors.html
@@ -129,6 +129,50 @@
 
         <div class="row">
 
+          <div class="col-xs-2 col-xs-offset-1">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/AgitPohang/?fref=ts">
+                <img src="./images/sponsors/2016/agit.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/ramenberavo/?fref=ts">
+                <img src="./images/sponsors/2016/beravo.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.twosome.co.kr:7009/microsite/2016/autumn/intro.asp">
+                <img src="./images/sponsors/2016/twosome.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/PoApper/?fref=ts">
+                <img src="./images/sponsors/2016/poapper.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/postechstu">
+                <img src="./images/sponsors/2016/cider.png">
+              </a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row">
+
           <div class="col-xs-3">
             <div class="thumbnail center-block">
                 <img class="img-responsive" src="./images/sponsors/2016/aulete.jpg">
@@ -153,42 +197,6 @@
             <div class="thumbnail center-block">
               <a target="_blank" href="https://www.facebook.com/postechpbs/?fref=ts">
                 <img src="./images/sponsors/2016/pbs.png">
-              </a>
-            </div>
-          </div>          
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-3">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.facebook.com/AgitPohang/?fref=ts">
-                <img src="./images/sponsors/2016/agit.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-3">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.facebook.com/ramenberavo/?fref=ts">
-                <img src="./images/sponsors/2016/beravo.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-3">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.twosome.co.kr:7009/microsite/2016/autumn/intro.asp">
-                <img src="./images/sponsors/2016/twosome.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-3">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.facebook.com/PoApper/?fref=ts">
-                <img src="./images/sponsors/2016/poapper.png">
               </a>
             </div>
           </div>
