--- a/register.html
+++ b/register.html
@@ -116,35 +116,35 @@
                 <td>TEDx Talk #3</td>
               </tr>
               <tr>
-                <td>16:15 ~ 16:35</td>
-                <td>1부 연사 Q&A</td>
+                <td>16:15 ~ 16:45</td>
+                <td>Icebreaking</td>
               </tr>
               <tr>
-                <td>16:35 ~ 17:00</td>
-                <td>Break Time, TED Talk #2</td>
+                <td>16:45 ~ 17:00</td>
+                <td>Break Time</td>
               </tr>
               <tr>
                 <td>17:00 ~ 17:25</td>
-                <td>TEDx Talk #4</td>
+                <td>TED Talk #2</td>
               </tr>
               <tr>
                 <td>17:25 ~ 17:50</td>
+                <td>TEDx Talk #4</td>
+              </tr>
+              <tr>
+                <td>17:50 ~ 18:15</td>
                 <td>TEDx Talk #5</td>
               </tr>
               <tr>
-                <td>17:50 ~ 18:10</td>
-                <td>TEDx Talk #6<td>
+                <td>18:15 ~ 18:40</td>
+                <td>TEDx Talk #6</td>
               </tr>
               <tr>
-                <td>18:10 ~ 18:30</td>
-                <td>2부 연사 Q&A</td>
-              </tr>
-              <tr>
-                <td>18:30 ~ 18:50</td>
+                <td>18:40 ~ 19:00</td>
                 <td>클로징</td>
               </tr>
               <tr>
-                <td>19:00 ~      </td>
+                <td>19:00 ~ 21:00</td>
                 <td>After Party****</td>
               </tr>
             </tbody>
