finish adding pictures

--- a/organizers.html
+++ b/organizers.html
@@ -93,7 +93,7 @@
         <div class="row" id="last">
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/dbwodnjs.jpg" class="img-circle center-block">
+              <img src="./images/organizers/2016/dldyddn.jpg" class="img-circle center-block">
               <p class="center-block">이용우<br>EE 14</p>
             </div>
           </div>
