make index page responsive

--- a/organizers.html
+++ b/organizers.html
@@ -8,7 +8,6 @@
     <title>2016 TEDxPOSTECH</title>
 
     <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     <script src="./bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js"></script>
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
@@ -52,7 +51,7 @@
         <div class="row">
           <div class="col-xs-1"></div>
           <div class="col-xs-10">
-            <h3>Message from TEDxPOSTECH 3rd Organizer Director</h3>
+            <h3>Message from TEDxPOSTECH 3rd Organizers</h3>
             <p>안녕하세요. TEDxPOSTECH 세 번째 행사의 진행을 맡게 된 강한솔입니다.</p>
             <p>여러분에게 TEDx는 어떤 기억을 불러 일으키나요? TEDx 라는 이름이 저희들에게 갖는 의미는 특별합니다. “Ideas worth spreading”이라는 목적 아래 TED는 많은 이들에게 비전을 제시해 주었고, 더 나은 내일을 꿈꾸게 하고, 변화할 수 있는 힘을 주었습니다. 그래서 오는 11월 5일, 사회 곳곳의 열정 넘치는 분들을 초대하여 학내 구성원들과 이 특별한 경험을 공유하고자 합니다. 쉬운 일은 아니었습니다. 그럼에도 TEDxPOSTECH의 개최를 위해 끝까지 달려올 수 있었던 힘은, ‘정말로 사람들에게 이 멋진 이야기들을 소개하고 싶다’는 열망입니다. TED가 저희를 비롯한 많은 사람들에게 지금까지 그래왔듯이 좀 더 흥미롭게 이야기를 전달하고 싶고, 사람들이 오늘과 다른 내일을 살아내는 계기가 되도록 하자는 신념이 있기 때문입니다. 이러한 진심을 6가지의 특별한 아이디어와 소중한 경험에 담았습니다.</p>
             <p>오는 11월 5일, 3회 TEDxPOSTECH 행사를 통해 대학 생활의 소중한 기억을 담아 가시길 바랍니다. </p>
