--- a/index.html
+++ b/index.html
@@ -18,32 +18,41 @@
           
 
   <body>
-    <div class="header">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html"><img src="./images/logo.png"></a>
-        </div>
-        <ul class="pull-right nav nav-pills">
-          <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
-              <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
-            </ul>
-          </li>
-          <li><a href="speakers.html">Speakers</a></li>
-          <li><a href="organizers.html">Organizers</a></li>
-          <li><a href="sponsors.html">Sponsors</a></li>
-          <li><a href="register.html">Register</a></li>
-        </ul>
-      </div>
-    </div>
+    <div class="page-wrap">
 
-    <div class="main">
-      <div class="container">
-        <div class="jumbotron">
+      <div class="header">
+        <div class="container">
+          <div class="logo">
+            <a href="index.html"><img src="./images/logo.png"></a>
+          </div>
+          <ul class="pull-right nav nav-pills">
+            <li><a href="about.html">About</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
+                <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
+              </ul>
+            </li>
+            <li><a href="speakers.html">Speakers</a></li>
+            <li><a href="organizers.html">Organizers</a></li>
+            <li><a href="sponsors.html">Sponsors</a></li>
+            <li><a href="register.html">Register</a></li>
+          </ul>
         </div>
       </div>
+
+      <div class="main">
+
+        <div class="container">
+
+          <div class="img-wrapper">
+            <img src="images/index.jpg">
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
 
 
