--- a/speakers.html
+++ b/speakers.html
@@ -71,21 +71,25 @@
           </div>
         </div>
 
-        <div class="row" id="comingsoon">
+        <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers/speakers_comingsoon.png" class="img-circle center-block">
+            <img src="./images/speakers/2016/speakers_jgy.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h1>Coming Soon! 2016/10/14</h1>
+            <h3>정계원</h3>
+            <p>정계원 이사님은 한국인 최초 국제 기억력 마스터 자격을 취득하셨고, 세계기억력대회에 국가대표로 출전하셨습니다. <셜록의 기억력을 훔쳐라>라는 책을 저술하셨습니다. 한국기억력스포츠협회 이사로 계시며 기억력스포츠의 대중화를 위해 활동하고 계십니다.</p>
+            <p>스마트폰과 클라우드로 수많은 데이터가 쌓이는 현 시대에서, ‘저장’으로서 인간의 ‘기억력’은 그 힘을 잃어가고 있습니다. 사실 인간은 있는 그대로 정보를 저장하지 않고, 경험과 지식에 영향을 받아 변형시키고, 어처구니 없는 경로를 통해 떠올리기도 합니다. 이런 인간의 두뇌를 역으로 이용하여 단 한 시간에 1000자리의 무작위 숫자를 기억하는 것은 누구나 할 수 있다고 주장하는 사람이 있습니다. 정계원 이사의 강연을 통해 ‘저장’으로써의 기억력이 아닌 인간만의 ‘창의적’기억력을 알아볼까요?</p>
           </div>
         </div>
 
-        <div class="row" id="comingsoon">
+        <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers/speakers_comingsoon.png" class="img-circle center-block">
+            <img src="./images/speakers/2016/speakers_khc.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h1>Coming Soon! 2016/10/14</h1>
+            <h3>김형철</h3>
+            <p>김형철 교수님은 연세대학교 철학과 교수로, 전국 인문학 최우수 교수로 선정되셨습니다. 삼성경제연구소 최우수 강사로 선정되셨고, 인문학을 대중들에게 풀어내는 데에 노력하고 계십니다.</p>
+            <p>사람들은 인문학이 중요하다고 외치지만, 인문학과가 외면 받는 현 시대에서 인문학은 쓸모 없는 학문일까요? 인문학은 우리에게 어떤 쓸모를 가져다 줄까요? 여기, ‘쓸모 없는 것이 쓸모 있는 것’이라고 주장하는 사람이 있습니다. 장자의 無用之用(무용지용)을 통해 ‘한계’를 바라보는 교수님의 아이디어를 듣고자 합니다.</p>
           </div>
         </div>
 
