add 2 speakers to speakers page

--- a/speakers.html
+++ b/speakers.html
@@ -95,19 +95,23 @@
 
         <div class="row" id="comingsoon">
           <div class="col-xs-4">
-            <img src="./images/speakers/speakers_comingsoon.png" class="img-circle center-block">
+            <img src="./images/speakers/2016/speakers_jmg.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h1>Coming Soon! 2016/10/21</h1>
+            <h3>정민기</h3>
+            <p>정민기 작가님은 프랑스와 일본, 한국을 오가며 개인전과 단체전에 참여하고 계씹니다. 2013년 서울 시민청에서 재봉틀 드로잉 쇼를 통해 퍼포먼스 쇼를 선보였으며 2016 아미 미술관 입주작가로 활동하고 계십니다. 관계와 소통, 경험에 대한 반응과 관련된 이야기들을 재봉틀을 매개로 풀어내고 계십니다.</p>
+            <p>창의력의 기반은 경험이고, 창의력은 틀을 깨는 혁신을 가능케 합니다. 어떠한 시선으로 대상을 볼 것인지에 대한 고민과, 낯선 경험에 대한 도전은 새로운 가치를 생산하는 근간이 됩니다. 그리고 여기에 어머니의 손길로 돌아가던 재봉틀을 주목한 사람이 있습니다. 재봉틀을 드로잉 ‘툴’로 바라보고 실험하며, 멋진 삶을 그려 나가는 정민기 작가님의 이야기를 작품으로 만나 볼까요?</p>
           </div>
         </div>
 
         <div class="row last" id="comingsoon">
           <div class="col-xs-4">
-            <img src="./images/speakers/speakers_comingsoon.png" class="img-circle center-block">
+            <img src="./images/speakers/2016/speakers_kcy.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h1>Coming Soon! 2016/10/21</h1>
+            <h3>김초엽</h3>
+            <p>김초엽 연사님은 한국예술종합학교, POSTECH, APCTP(아-태 이론물리학 연구센터)등에서 과학칼럼과 SF 중편소설을 연재하셨고, 2014년부터 본교 과학철학 및 과학기술학 세미나 &lt생각모임&gt 의 대표를 맡고 계십니다. 청각 장애를 갖고 계심에도 2015년 대한민국인재상, 2016년 무은재상을 수상하셨고 현재 본교 바이오센서 및 구조생물학 연구실 석사 과정을 밟고 계십니다.</p>
+            <p>'한계를 극복하다' 같은 말을 들을 때 사람들은 흔히 개인이 노력해서 장벽을 넘어선 역경 극복의 서사를 떠올립니다. 하지만 사회적으로 이러한 '한계를 극복한 경험들'이 조명되는 것이 긍정적이기만 한 현상인 걸까요? '역경을 극복한 미담의 주인공'으로 살아왔던 연사님의 경험으로부터 역경 극복 스토리의 허상을 지적하고, 개인들이 한계를 극복하는 노력들을 조명하는 것을 넘어서서, 사회 전체가 한계의 경계선을 확장해나가야 한다는 아이디어를 함께 나누고자 합니다.</p>
           </div>
         </div>
 
