--- a/organizers.html
+++ b/organizers.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>2016 TEDxPOSTECH</title>
+    <title>2017 TEDxPOSTECH</title>
 
     <link rel="stylesheet" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <script src="./bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js"></script>
@@ -26,6 +26,7 @@
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
             <ul class="dropdown-menu">
+              <li><a href="2016.html">2016 TEDxPOSTECH</a></li>
               <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
               <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
             </ul>
