--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
             <div class="thumbnail">
               <img src="./images/tedxpostech.png">
             </div>
-            <h3>2016 TEDxPOSTECH<br>Unlimited</h3>
-            <p>제3회 TEDxPOSTECH의 주제는 ‘unlimited’입니다. ‘unlimited’를 주제로 삼은 까닭은, 저희 TEDxPOSTECH을 통해 POSTECH의 구성원들이 서로의 limit와 unlimit에 대한 고민과 경험을 나누고 한계에 대한 새로운 시각들을 나누기 위함입니다. 여러분은 unlimited(제한되지 않은) 라는 주제를 통해 재미있는 방식으로 한계를 극복하거나, 한계를 강점으로 바꿔 자신만의 분야를 개척한 이야기 등 다양한 시각에서 접근하고, 활용하는 limit에 대해 이야기 나누게 될 것입니다. 여러분은 limit을 어떤 시각으로 바라보고 다루려 하시나요?</p>
+            <h3>2017 TEDxPOSTECH<br>FLUX</h3>
+            <p>제4회 TEDxPOSTECH의 주제는 ‘FLUX’입니다. ‘FLUX’의 사전적 의미는 유동, 흐름, 끊임없는 변화입니다. 저희 Oraganizer들은 FLUX의 의미를 끊임없는 소통(연결)에 초점을 두고 있습니다. 특히 ‘소통의 수단과 다양화’라는 큰 주제를 관통하는 가치있는 idea를 POSTECH 구성원들에게 제공하고자 합니다. 저희는 소통을 통해 끊임없는 변화를 맞이하기 위한 계기가 필요하다고 생각하였고, 올해 제4회 TEDxPOSTECH가 여러 idea를 교류할 수 있는 장이 될 것입니다. 여러분이 생각하는 ‘FLUX’는 무엇인가요? 여러분의 많은 관심 부탁드립니다.</p>
           </div>
 
         </div>
