change organizer page

--- a/organizers.html
+++ b/organizers.html
@@ -42,7 +42,7 @@
     <div class="jumbotron" id="organizers">
       <div class="container">
         <h1>Organizers</h1>
-        <p>2016 TEDxPOSTECH을 준비한 8명의 3rd Organizer들을 소개합니다.</p>
+        <p>2017 TEDxPOSTECH을 준비한 8명의 4th Organizer들을 소개합니다.</p>
       </div>
     </div>
 
@@ -52,12 +52,13 @@
         <div class="row">
           <div class="col-xs-1"></div>
           <div class="col-xs-10">
-            <h3>Message from TEDxPOSTECH 3rd Organizers</h3>
-            <p>안녕하세요. TEDxPOSTECH 세 번째 행사의 진행을 맡게 된 강한솔입니다.</p>
-            <p>여러분에게 TEDx는 어떤 기억을 불러 일으키나요? TEDx 라는 이름이 저희들에게 갖는 의미는 특별합니다. “Ideas worth spreading”이라는 목적 아래 TED는 많은 이들에게 비전을 제시해 주었고, 더 나은 내일을 꿈꾸게 하고, 변화할 수 있는 힘을 주었습니다. 그래서 오는 11월 5일, 사회 곳곳의 열정 넘치는 분들을 초대하여 학내 구성원들과 이 특별한 경험을 공유하고자 합니다. 쉬운 일은 아니었습니다. 그럼에도 TEDxPOSTECH의 개최를 위해 끝까지 달려올 수 있었던 힘은, ‘정말로 사람들에게 이 멋진 이야기들을 소개하고 싶다’는 열망입니다. TED가 저희를 비롯한 많은 사람들에게 지금까지 그래왔듯이 좀 더 흥미롭게 이야기를 전달하고 싶고, 사람들이 오늘과 다른 내일을 살아내는 계기가 되도록 하자는 신념이 있기 때문입니다. 이러한 진심을 6가지의 특별한 아이디어와 소중한 경험에 담았습니다.</p>
-            <p>오는 11월 5일, 3회 TEDxPOSTECH 행사를 통해 대학 생활의 소중한 기억을 담아 가시길 바랍니다. </p>
+            <h3>Message from TEDxPOSTECH 4th Organizers</h3>
+            <p>안녕하세요. TEDxPOSTECH 네 번째 행사의 사회자를 맡게 된 김정수입니다.</p>
+            <p>Ideas worth spreading, 바로 TED의 모토입니다. 저희는 지난 TEDxPOSTECH 행사가 건네준 가치 있는 아이디어에 감명을 받아서, 또는 지난 행사에 참여하지는 못했지만 TED 자체에 흥미와 열정을 가지고 이번 네 번째 Organizer에 지원하였습니다. 저마다 다른 생각을 가지고 시작했지만, TED의 모토가 말하듯 가치 있는 아이디어를 교내 학우분들에게 들려주고 싶고 퍼트리고 싶다는 하나의 뜻으로 뭉쳤습니다. 긴 시간 동안 정성을 들여 본 행사를 준비했습니다. 이제 여러분에게 그 결과를 보여줄 수 있어서 정말 영광스럽고 기대가 됩니다.</p>
+            <p>이번 행사의 큰 주제는 바로 FLUX입니다. 그 사전적 의미는 유동, 흐름, 끊임없는 변화이지만 공대생이라면 단위시간당 수직이동하는 물리량을 의미하는 개념을 생각할 수도 있겠습니다. 저희는 FLUX의 의미 중에서도 ‘끊임없는 소통과 연결’ 에 초점을 두고 있습니다. 사람과 사람의 연결, 매체를 통한 소통, 내면과의 소통 등 소통의 수단과 다양화라는 주제를 관통하는 가치 있는 아이디어를 여러 분야의 연사 분들을 통해 제공하고자 합니다.</p>
+            <p>올해 11월 4일 토요일, 네 번째 TEDxPOSTECH에서 준비한 아이디어와 소통으로 여러분이 조금이라도 변화를 맞이할 계기가 될 수 있다면 저희에겐 아주 가치 있는 일이 될 것입니다.</p>
             <p>감사합니다.</p>
-            <p id="right-align">TEDxPOSTECH 3rd Organizer</p>
+            <p id="right-align">TEDxPOSTECH 4th Organizer</p>
             <p id="right-align">일동 올림.</p>
             <div class="col-xs-1"></div>
           </div>
@@ -66,26 +67,26 @@
         <div class="row">
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/organizers/2016/rkdgksthf.jpg" class="img-circle center-block">
-              <p class="center-block">강한솔<br>LIFE 15</p>
+              <img src="./images/organizers/2017/rhdghkstjr.jpg" class="img-circle center-block">
+              <p class="center-block">공환석<br>LIFE 16</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/organizers/2016/rladudco.jpg" class="img-circle center-block">
-              <p class="center-block">김영채<br>EE 15</p>
+              <img src="./images/organizers/2017/rlawjdtn.jpg" class="img-circle center-block">
+              <p class="center-block">김정수<br>PCE 16</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/organizers/2016/rlacodbs.jpg" class="img-circle center-block">
-              <p class="center-block">김채윤<br>PHYS 15</p>
+              <img src="./images/organizers/2017/dbscofla.jpg" class="img-circle center-block">
+              <p class="center-block">윤채림<br>BIO 16</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/organizers/2016/dlalsrud.jpg" class="img-circle center-block">
-              <p class="center-block">이민경<br>MSE 15</p>
+              <img src="./images/organizers/2017/dlwngus.jpg" class="img-circle center-block">
+              <p class="center-block">이주현<br>BIO 16</p>
             </div>
           </div>
         </div>
@@ -93,26 +94,26 @@
         <div class="row" id="last">
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/organizers/2016/dldyddn.jpg" class="img-circle center-block">
-              <p class="center-block">이용우<br>EE 14</p>
+              <img src="./images/organizers/2017/dlghwjd.jpg" class="img-circle center-block">
+              <p class="center-block">이호정<br>PCE 15</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/organizers/2016/dlaehdgus.jpg" class="img-circle center-block">
-              <p class="center-block">임동현<br>ME 14</p>
+              <img src="./images/organizers/2017/dlawnsdud.jpg" class="img-circle center-block">
+              <p class="center-block">임준영<br>ME 16</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/organizers/2016/chltkdqja.png" class="img-circle center-block">
-              <p class="center-block">최상범<br>EE 15</p>
+              <img src="./images/organizers/2017/chltnwl.jpg" class="img-circle center-block">
+              <p class="center-block">최수지<br>BIO 16</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/organizers/2016/ghddlswn.jpg" class="img-circle center-block">
-              <p class="center-block">홍인주<br>PCE 15</p>
+              <img src="./images/organizers/2017/chlgPdnjs.jpg" class="img-circle center-block">
+              <p class="center-block">최혜원<br>BIO 16</p>
             </div>
           </div>
         </div>
