--- a/register.html
+++ b/register.html
@@ -43,7 +43,7 @@
     <div class="jumbotron" id="register">
       <div class="container">
         <h1>Register Now</h1>
-        <p>2016 TEDxPOSTECH에 참가하세요.</p>
+        <p>2017 TEDxPOSTECH에 참가하세요.</p>
       </div>
     </div>
 
@@ -53,7 +53,7 @@
         <div class="row information">
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-calendar" aria-hidden="true"></div>
-            <p class="info">2015/11/05</p>
+            <p class="info">2017/11/04<br>토요일</p>
           </div>
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-map-marker" aria-hidden="true"></div>
@@ -61,7 +61,7 @@
           </div>
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-time" aria-hidden="true"></div>
-            <p class="info">From 13:00<br>Until 20:30</p>
+            <p class="info">From 14:00<br>Until 21:00</p>
           </div>
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-cutlery" aria-hidden="true"></div>
@@ -72,7 +72,7 @@
         <div class="row schedule">
           <table class="table table-striped">
             <thead>
-              <th colspan="2">행사 당일 일정(11월 5일 토요일)*</th>
+              <th colspan="2">행사 당일 일정(11월 4일 토요일)*</th>
             </thead>
             <tfoot>
               <tr>
@@ -117,31 +117,23 @@
                 <td>TEDx Talk #3</td>
               </tr>
               <tr>
-                <td>16:15 ~ 16:45</td>
-                <td>Icebreaking</td>
+                <td>16:15 ~ 16:35</td>
+                <td>Break time, TED talk #2</td>
               </tr>
               <tr>
-                <td>16:45 ~ 17:00</td>
-                <td>Break Time</td>
-              </tr>
-              <tr>
-                <td>17:00 ~ 17:25</td>
-                <td>TED Talk #2</td>
-              </tr>
-              <tr>
-                <td>17:25 ~ 17:50</td>
+                <td>16:35 ~ 17:00</td>
                 <td>TEDx Talk #4</td>
               </tr>
               <tr>
-                <td>17:50 ~ 18:15</td>
+                <td>17:00 ~ 17:25</td>
                 <td>TEDx Talk #5</td>
               </tr>
               <tr>
-                <td>18:15 ~ 18:40</td>
+                <td>17:25 ~ 17:50</td>
                 <td>TEDx Talk #6</td>
               </tr>
               <tr>
-                <td>18:40 ~ 19:00</td>
+                <td>17:50 ~ 18:10</td>
                 <td>클로징</td>
               </tr>
               <tr>
@@ -163,7 +155,7 @@
             <h3>Eary Bird Registration</h3>
             <p></p>
             <p>Early Bird 참가신청은 행사의 안정적인 자원확보를 목적으로 먼저 참가비를 내주시는 청중분들께 기존 10,000원인 참가비를 50% 할인해드리는 제도입니다. 참가 신청을 보내신 후 입금한 선착순 30명에게만 주어지는 혜택이며, 이에 따른 일반 참가자와의 차별은 전혀 없습니다.</p>
-            <p><a target="_blank" class="btn btn-primary" role="button" id="notavailable">Sold Out</a></p>
+            <p><a target="_blank" class="btn btn-primary notavailable" role="button">Sold Out</a></p>
 
           </div>
 
@@ -174,8 +166,8 @@
             </div>
 
             <h3>Regular Registration</h3>
-            <p>Regular 참가신청 비용은 예약 10,000원입니다. 신청은 10월 15일 밤 9시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
-            <p><a type="button" data-toggle="modal" data-target="#form" class="btn btn-primary" role="button" id="available">Register</a></p>
+            <p>Regular 참가신청 비용은 예약 10,000원입니다. 신청은 10월 19일 밤 10시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
+            <p><a class="btn btn-primary notavailable" role="button">Sold Out</a></p>
 
           </div>
 
