--- a/register.html
+++ b/register.html
@@ -167,7 +167,7 @@
 
             <h3>Regular Registration</h3>
             <p>Regular 참가신청 비용은 예약 10,000원입니다. 신청은 10월 19일 밤 10시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
-            <p><a class="btn btn-primary notavailable" role="button">Sold Out</a></p>
+            <p><a type="button" data-toggle="modal" data-target="#form" class="btn btn-primary available" role="button">Register</a></p>
 
           </div>
 
@@ -188,10 +188,10 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">2016 TEDxPOSTECH Regular Register</h4>
+            <h4 class="modal-title">2017 TEDxPOSTECH Regular Register</h4>
           </div>
           <div class="modal-body">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfiInAEMB70PxT0eC7ahk-UkZz1Gd749LIEVf4l2xGnrgm4Cw/closedform" height="500" width="100%" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd0ddn3DqNoGKGA_9HhxDC7je57MT9TdvelqPE1swGmyipYOw/closedform" height="500" width="100%" frameborder="0" marginheight="0" marginwidth="0"></iframe>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
