change sponsors page

--- a/sponsors.html
+++ b/sponsors.html
@@ -52,15 +52,15 @@
 
         <div class="row">
 
-          <div class="col-xs-3"></div>
+          <div class="col-xs-2"></div>
 
-          <div class="col-xs-6">
+          <div class="col-xs-8">
             <div class="thumbnail center-block" id="biglogo">
               <img src="./images/biglogo.png">
             </div>
           </div>
 
-          <div class="col-xs-3"></div>
+          <div class="col-xs-2"></div>
 
         </div>
 
@@ -74,10 +74,28 @@
 
         <div class="row">
 
+          <div class="col-xs-3"></div>
+
+          <div class="col-xs-6">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.pentasecurity.com/?lang=ko">
+                <img src="./images/sponsors/2017/pentasecurity.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-3"></div>
+          
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-2"></div>
+
           <div class="col-xs-4">
             <div class="thumbnail center-block">
               <a target="_blank" href="http://aif.postech.ac.kr/">
-                <img src="./images/sponsors/2016/ec.png">
+                <img src="./images/sponsors/2017/ec.png">
               </a>
             </div>
           </div>
@@ -85,90 +103,36 @@
           <div class="col-xs-4">
             <div class="thumbnail center-block">
               <a target="_blank" href="http://iptt.postech.ac.kr/index.php">
-                <img src="./images/sponsors/2016/eedc.png">
+                <img src="./images/sponsors/2017/eedc.png">
               </a>
             </div>
           </div>
+
+          <div class="col-xs-2"></div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-2"></div>
 
           <div class="col-xs-4">
             <div class="thumbnail center-block">
               <a target="_blank" href="http://postechholdings.com/">
-                <img src="./images/sponsors/2016/gjjh.jpg">
-              </a>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-4">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="http://iptt.postech.ac.kr/">
-                <img src="./images/sponsors/2016/bic.png">
+                <img src="./images/sponsors/2017/gjjh.jpg">
               </a>
             </div>
           </div>
 
           <div class="col-xs-4">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.pentasecurity.com/?lang=ko">
-                <img src="./images/sponsors/2016/pentasecurity.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-4">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.mrpizza.co.kr/">
-                <img src="./images/sponsors/2016/mrpizza.png">
-              </a>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-2 col-xs-offset-1">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.facebook.com/AgitPohang/?fref=ts">
-                <img src="./images/sponsors/2016/agit.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.facebook.com/ramenberavo/?fref=ts">
-                <img src="./images/sponsors/2016/beravo.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.twosome.co.kr:7009/microsite/2016/autumn/intro.asp">
-                <img src="./images/sponsors/2016/twosome.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="https://www.facebook.com/PoApper/?fref=ts">
-                <img src="./images/sponsors/2016/poapper.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
             <div class="thumbnail center-block">
               <a target="_blank" href="https://www.facebook.com/postechstu">
-                <img src="./images/sponsors/2016/cider.png">
+                <img src="./images/sponsors/2017/neonadeuli.png">
               </a>
             </div>
           </div>
+
+          <div class="col-xs-2"></div>
 
         </div>
 
@@ -176,20 +140,8 @@
 
           <div class="col-xs-3">
             <div class="thumbnail center-block">
-                <img class="img-responsive" src="./images/sponsors/2016/aulete.jpg">
-            </div>
-          </div>
-
-          <div class="col-xs-3">
-            <div class="thumbnail center-block">
-                <img src="./images/sponsors/2016/musasui.gif">
-            </div>
-          </div>
-
-          <div class="col-xs-3">
-            <div class="thumbnail center-block">
-              <a target="_blank" href="http://www.pasiya.co.kr/index.php">
-                <img src="./images/sponsors/2016/pasiya.png">
+              <a target="_blank" href="https://www.facebook.com/PoApper/?fref=ts">
+                <img src="./images/sponsors/2017/poapper.png">
               </a>
             </div>
           </div>
@@ -197,10 +149,84 @@
           <div class="col-xs-3">
             <div class="thumbnail center-block">
               <a target="_blank" href="https://www.facebook.com/postechpbs/?fref=ts">
-                <img src="./images/sponsors/2016/pbs.png">
+                <img src="./images/sponsors/2017/pbs.png">
               </a>
             </div>
           </div>
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.mrpizza.co.kr/">
+                <img src="./images/sponsors/2017/mrpizza.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/AgitPohang/?fref=ts">
+                <img src="./images/sponsors/2017/agit.jpg">
+              </a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-2"></div>
+
+          <div class="col-xs-6">
+
+            <div class="row">
+            
+              <div class="col-xs-6">
+                <div class="thumbnail center-block">
+                  <a target="_blank" href="http://www.momstouch.co.kr">
+                    <img src="./images/sponsors/2017/momstouch.png">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-xs-6">
+                <div class="thumbnail center-block">
+                  <a target="_blank" href="http://www.codd.co.kr/">
+                    <img src="./images/sponsors/2017/ddangddang.png">
+                  </a>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="row">
+
+              <div class="col-xs-6">
+                <div class="thumbnail center-block">
+                  <a target="_blank" href="https://www.twosome.co.kr:7009/microsite/2016/autumn/intro.asp">
+                    <img src="./images/sponsors/2017/twosome.jpg">
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-xs-6">
+                <div class="thumbnail center-block">
+                    <img class="img-responsive" src="./images/sponsors/2017/aulete.jpg">
+                </div>
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/postechpbs/?fref=ts">
+                <img src="./images/sponsors/2017/ocelot.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2"></div>
 
         </div>
 
