fix register page's timetable

--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
           </div>
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-time" aria-hidden="true"></div>
-            <p class="info">From 14:00<br>Until 21:00</p>
+            <p class="info">From 14:30<br>Until 21:00</p>
           </div>
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-cutlery" aria-hidden="true"></div>
@@ -93,47 +93,47 @@
             </tfoot>
             <tbody>
               <tr>
-                <td>13:00 ~ 14:00</td>
+                <td>13:30 ~ 14:30</td>
                 <td>리허설</td>
               </tr>
               <tr>
-                <td>14:00 ~ 14:30</td>
+                <td>14:30 ~ 15:00</td>
                 <td>입장 및 현장 등록</td>
               </tr>
               <tr>
-                <td>14:30 ~ 15:00</td>
+                <td>15:00 ~ 15:30</td>
                 <td>오프닝 & TED Talk** #1</td>
               </tr>
               <tr>
-                <td>15:00 ~ 15:25</td>
+                <td>15:30 ~ 15:55</td>
                 <td>TEDx Talk #1</td>
               </tr>
               <tr>
-                <td>15:25 ~ 15:50</td>
+                <td>15:55 ~ 16:20</td>
                 <td>TEDx Talk #2</td>
               </tr>
               <tr>
-                <td>15:50 ~ 16:15</td>
+                <td>16:20 ~ 16:50</td>
+                <td>Break time, Icebreaking</td>
+              </tr>
+              <tr>
+                <td>16:50 ~ 17:10</td>
+                <td>TED Talk #2</td>
+              </tr>
+              <tr>
+                <td>17:10 ~ 17:35</td>
                 <td>TEDx Talk #3</td>
               </tr>
               <tr>
-                <td>16:15 ~ 16:35</td>
-                <td>Break time, TED talk #2</td>
-              </tr>
-              <tr>
-                <td>16:35 ~ 17:00</td>
+                <td>17:35 ~ 18:00</td>
                 <td>TEDx Talk #4</td>
               </tr>
               <tr>
-                <td>17:00 ~ 17:25</td>
+                <td>18:00 ~ 18:25</td>
                 <td>TEDx Talk #5</td>
               </tr>
               <tr>
-                <td>17:25 ~ 17:50</td>
-                <td>TEDx Talk #6</td>
-              </tr>
-              <tr>
-                <td>17:50 ~ 18:10</td>
+                <td>18:25 ~ 18:35</td>
                 <td>클로징</td>
               </tr>
               <tr>
