change speakers page

--- a/2016.html
+++ b/2016.html
@@ -225,7 +225,7 @@
           </div>
           <div class="col-xs-8">
             <h3>정민기</h3>
-            <p>정민기 작가님은 프랑스와 일본, 한국을 오가며 개인전과 단체전에 참여하고 계씹니다. 2013년 서울 시민청에서 재봉틀 드로잉 쇼를 통해 퍼포먼스 쇼를 선보였으며 2016 아미 미술관 입주작가로 활동하고 계십니다. 관계와 소통, 경험에 대한 반응과 관련된 이야기들을 재봉틀을 매개로 풀어내고 계십니다.</p>
+            <p>정민기 작가님은 프랑스와 일본, 한국을 오가며 개인전과 단체전에 참여하고 계십니다. 2013년 서울 시민청에서 재봉틀 드로잉 쇼를 통해 퍼포먼스 쇼를 선보였으며 2016 아미 미술관 입주작가로 활동하고 계십니다. 관계와 소통, 경험에 대한 반응과 관련된 이야기들을 재봉틀을 매개로 풀어내고 계십니다.</p>
             <p>창의력의 기반은 경험이고, 창의력은 틀을 깨는 혁신을 가능케 합니다. 어떠한 시선으로 대상을 볼 것인지에 대한 고민과, 낯선 경험에 대한 도전은 새로운 가치를 생산하는 근간이 됩니다. 그리고 여기에 어머니의 손길로 돌아가던 재봉틀을 주목한 사람이 있습니다. 재봉틀을 드로잉 ‘툴’로 바라보고 실험하며, 멋진 삶을 그려 나가는 정민기 작가님의 이야기를 작품으로 만나 볼까요?</p>
           </div>
         </div>
