--- a/speakers.html
+++ b/speakers.html
@@ -43,7 +43,7 @@
     <div class="jumbotron" id="speakers">
       <div class="container">
         <h1>Speakers</h1>
-        <p>2016 TEDxPOSTECH을 빛내주실 연사분들을 기대해주세요.</p>
+        <p>2017 TEDxPOSTECH을 빛내주실 연사분들을 기대해주세요.</p>
       </div>
     </div>
 
@@ -52,67 +52,56 @@
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers/2016/speakers_lnh.jpg" class="img-circle center-block">
+            <img src="./images/speakers/2017/speakers_ljy.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h3>이남희</h3>
-            <p>스트레스 컴퍼니의 이남희 대표님은 한국예술종합학교 미술원 조형예술과를 졸업하시고, 사회적기업 노리단 에서 사회디자인팀 디자이너로 활동하셨습니다. 스트레스컴퍼니의 대표로, 사람들 사이의 스트레스를 부드럽게 해소하는 방법과 갈등을 방지할 수 있는 도구들을 즐겁게 실험하고 계십니다.</p>
-            <p>하루에도 수십 번씩 받는 스트레스. 당신을 괴롭히는 쓸모 없는 것이라 여기고 무조건 없애 버려야만 한다고 생각하신 적 있나요? 여기 본인의 스트레스를 해소하기 위해 스트레스컴퍼니 라는 회사를 만들고, 세상에 없던 상품들을 제작하며 스트레스를 자신의 삶에서 없어서는 안될 에너지로 바꾼 사람이 있습니다. 스트레스컴퍼니 이남희 대표님의 이야기를 통해 당신의 스트레스에 대해서 다시 한 번 생각해볼 수 있는 시간을 가져보고자 합니다.</p>
+            <h3>임재영</h3>
+            <p>임재영 센터장님은 정신과 의사로서 의왕시정신건강복지센터의 센터장을 맡고 계십니다. 센터장님은 찾아가는 고민상담소를 운영하시면서 방방곡곡을 돌아다니며 상담과 치료를 진행하고 계십니다.</p>
+            <p>선뜻 정신과에 찾아오기 힘들어하는 사람들을 찾아 트럭을 몰고 다니는 그는 종종 '정신 나간 정신과 의사'라 불리곤 합니다. 먼저 다가가고 찾아가는 소통을 위해 의사에겐 홈그라운드 같은 병원을 관두고 거리로 나오게 된 임재영 센터장의 사연에는 '자유 의지'에 대한 이해와 마음의 병에 대한 깊은 이해가 녹아있습니다. 환자들에게 손을 내밀고 무료 상담을 해주는 '찾아가는 고민상담소'를 운영하는 그의 이야기로부터 소통에서 먼저 마음을 여는 법을 배우고자 합니다.</p>
           </div>
         </div>
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers/2016/speakers_jjs.jpg" class="img-circle center-block">
+            <img src="./images/speakers/2017/speakers_ktw.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h3>조진수</h3>
-            <p>조진수 안무가님은 M.net 댄싱9 시즌3 , MBC 마이리틀텔레비전에 출연하셨고, M.net 힛더스테이지 콘셉트쇼에서 안무 연출과 댄스전문 패널을 맡으셨던 BLANK / PINKY CHEEKS 소속의 스트릿댄서이자 안무가 이십니다. 2015 한류 힙합문화대상 인기상을 수상하셨고, 남자의 몸으로 남성성과 여성성을 모두 표현하는 독창적인 예술적 가치를 추구하고 계십니다.</p>
-            <p>남자는 남성을 표현하고, 여자는 여성을 표현하는 것이 자연스럽게 여겨지던 시기가 있었습니다. 하지만 ‘자연스럽다’라는 인식 속에 우리는 남성과 여성을 각각의 틀 속에 가둬버린 것은 아닐까요? 여기 남자의 몸으로 남성과 여성을 모두 표현해내는 댄서가 있습니다. 남들과 다른 관점으로 예술적 가치에 다가가고, 극복했던 제이블랙/제이핑크의 경험을 함께 들으며 ‘틀’에 대한 생각을 나눌 수 있는 시간을 가져보고자 합니다.</p>
+            <h3>김태우(테오)</h3>
+            <p>김태우 타투이스트님은 한곡예술종합학교 미술원 디자인, 시각디자인에서 학사 학위를 받으시고 2006년에 &lt테오타투&gt를 개업, 그 후 2012년에는 디자인회사 '테오워크룸'을 개업하여 현대자동차, TROIS ROIS, COACH 등의 기업들과 협업하고 계십니다.</p>
+            <p>역사의 흐름과 함께해 온 타투는 단순한 유행의 상징을 넘어 새로운 소통의 언어로 재탄생되고 있습니다. 상처를 예술로 변화시키고 개인의 소중한 가치를 몸에 남기면서 테오 타투이스트의 타투는 몸의 피부를 미디어로 활용하여 스스로를 대변하는 메시지를 전달하는 자기표현의 최전선으로 발전해왔습니다. 움직이는 캔버스 위의 그림을 통해 나다운 개성을 표출하고 세상과 소통하는 그의 타투에 대해 알아봅니다.</p>
           </div>
         </div>
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers/2016/speakers_jgy.jpg" class="img-circle center-block">
+            <img src="./images/speakers/2017/speakers_lsg.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h3>정계원</h3>
-            <p>정계원 이사님은 한국인 최초 국제 기억력 마스터 자격을 취득하셨고, 세계기억력대회에 국가대표로 출전하셨습니다. <셜록의 기억력을 훔쳐라>라는 책을 저술하셨습니다. 한국기억력스포츠협회 이사로 계시며 기억력스포츠의 대중화를 위해 활동하고 계십니다.</p>
-            <p>스마트폰과 클라우드로 수많은 데이터가 쌓이는 현 시대에서, ‘저장’으로서 인간의 ‘기억력’은 그 힘을 잃어가고 있습니다. 사실 인간은 있는 그대로 정보를 저장하지 않고, 경험과 지식에 영향을 받아 변형시키고, 어처구니 없는 경로를 통해 떠올리기도 합니다. 이런 인간의 두뇌를 역으로 이용하여 단 한 시간에 1000자리의 무작위 숫자를 기억하는 것은 누구나 할 수 있다고 주장하는 사람이 있습니다. 정계원 이사의 강연을 통해 ‘저장’으로써의 기억력이 아닌 인간만의 ‘창의적’기억력을 알아볼까요?</p>
+            <h3>이슬기</h3>
+            <p>이슬기 액션건축가님은 액션랩의 대표로서 아버지와의 여행을 담은 '댄싱위드파파', '아빠도 여행을 좋아해', 그리고 본인이 진정으로 원하는 일을 찾으라고 격려하는 '퇴직보고서'라는 책의 저자입니다.</p>
+            <p>액션건축가는 당신의 가능성을 발견하고, 고유한 컨텐츠를 제안하며, 필요한 행동을 실행으로 이끌어 주는 사람입니다. 대기업에 입사하였지만 퇴사를 결심하게 된 후 이슬기 액션건축가는 여행을 다니고 다양한 경험을 하며 나 자신과의 소통을 통해 본인이 진정으로 좋아하는 일이 무엇인지 알아가는 시간을 가졌습니다. 직접 경험한 것을 바탕으로 인간이라면 누구나 겪을 만한 고민 속에서 '자신이 만든 답'을 찾는 방법에 대한 그녀만의 솔직한 이야기를 풀어내고자 합니다.</p>
           </div>
         </div>
 
         <div class="row">
           <div class="col-xs-4">
-            <img src="./images/speakers/2016/speakers_khc.jpg" class="img-circle center-block">
+            <img src="./images/speakers/2017/speakers_pjw.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h3>김형철</h3>
-            <p>김형철 교수님은 연세대학교 철학과 교수로, 전국 인문학 최우수 교수로 선정되셨습니다. 삼성경제연구소 최우수 강사로 선정되셨고, 인문학을 대중들에게 풀어내는 데에 노력하고 계십니다.</p>
-            <p>사람들은 인문학이 중요하다고 외치지만, 인문학과가 외면 받는 현 시대에서 인문학은 쓸모 없는 학문일까요? 인문학은 우리에게 어떤 쓸모를 가져다 줄까요? 여기, ‘쓸모 없는 것이 쓸모 있는 것’이라고 주장하는 사람이 있습니다. 장자의 無用之用(무용지용)을 통해 ‘한계’를 바라보는 교수님의 아이디어를 듣고자 합니다.</p>
-          </div>
-        </div>
-
-        <div class="row" id="comingsoon">
-          <div class="col-xs-4">
-            <img src="./images/speakers/2016/speakers_jmg.jpg" class="img-circle center-block">
-          </div>
-          <div class="col-xs-8">
-            <h3>정민기</h3>
-            <p>정민기 작가님은 프랑스와 일본, 한국을 오가며 개인전과 단체전에 참여하고 계씹니다. 2013년 서울 시민청에서 재봉틀 드로잉 쇼를 통해 퍼포먼스 쇼를 선보였으며 2016 아미 미술관 입주작가로 활동하고 계십니다. 관계와 소통, 경험에 대한 반응과 관련된 이야기들을 재봉틀을 매개로 풀어내고 계십니다.</p>
-            <p>창의력의 기반은 경험이고, 창의력은 틀을 깨는 혁신을 가능케 합니다. 어떠한 시선으로 대상을 볼 것인지에 대한 고민과, 낯선 경험에 대한 도전은 새로운 가치를 생산하는 근간이 됩니다. 그리고 여기에 어머니의 손길로 돌아가던 재봉틀을 주목한 사람이 있습니다. 재봉틀을 드로잉 ‘툴’로 바라보고 실험하며, 멋진 삶을 그려 나가는 정민기 작가님의 이야기를 작품으로 만나 볼까요?</p>
+            <h3>박종원</h3>
+            <p>박종원 대표님은 심야서점, 독서모임, 작가와의 대화, 북파티, 공연 등 책으로 즐길 수 있는 다양한 프로그램을 운영하는 북카페 '북티크'의 대표입니다.</p>
+            <p>책을 만드는 출판사에서 독자를 만드는 서점으로, 박종원 대표는 북카페 '북티크'를 운영하며 책을 매개로 사람과 사람을 연결하는 일을 하고 있습니다. 사람들은 독서를 통해 지식을 습득하고 이를 다른 사람과 나눔으로써 새로운 가치를 얻기도 합니다. 사람들과 함께 자유롭게 책을 읽고 대화하는 문화를 나누는 '북티크'의 사례로부터 책과 사람의 연결, 책을 매개로 하는 사람과 사람의 연결,  공간에서 연결의 역할에 대해 이야기해보고자 합니다.</p>
           </div>
         </div>
 
         <div class="row last" id="comingsoon">
           <div class="col-xs-4">
-            <img src="./images/speakers/2016/speakers_kcy.jpg" class="img-circle center-block">
+            <img src="./images/speakers/2017/speakers_lwy.jpg" class="img-circle center-block">
           </div>
           <div class="col-xs-8">
-            <h3>김초엽</h3>
-            <p>김초엽 연사님은 한국예술종합학교, POSTECH, APCTP(아-태 이론물리학 연구센터)등에서 과학칼럼과 SF 중편소설을 연재하셨고, 2014년부터 본교 과학철학 및 과학기술학 세미나 &lt생각모임&gt 의 대표를 맡고 계십니다. 청각 장애를 갖고 계심에도 2015년 대한민국인재상, 2016년 무은재상을 수상하셨고 현재 본교 바이오센서 및 구조생물학 연구실 석사 과정을 밟고 계십니다.</p>
-            <p>'한계를 극복하다' 같은 말을 들을 때 사람들은 흔히 개인이 노력해서 장벽을 넘어선 역경 극복의 서사를 떠올립니다. 하지만 사회적으로 이러한 '한계를 극복한 경험들'이 조명되는 것이 긍정적이기만 한 현상인 걸까요? '역경을 극복한 미담의 주인공'으로 살아왔던 연사님의 경험으로부터 역경 극복 스토리의 허상을 지적하고, 개인들이 한계를 극복하는 노력들을 조명하는 것을 넘어서서, 사회 전체가 한계의 경계선을 확장해나가야 한다는 아이디어를 함께 나누고자 합니다.</p>
+            <h3>이원영</h3>
+            <p>이원영 대표님은 2015년도에 취임하신 씨엔엘프라자 대표이사이자, 현재 블루캔버스 사업의 사업장입니다.</p>
+            <p>FLUX 끊임없는 변화. 4차 산업혁명이라는 단어 속에 들어있는 무수한 기술과 그 기술들로 변화되는 세상속에 나라는 존재는 어떻게 변화되고 있을까요? 이 수많은 기술과 시도들은 무엇을 위한 것일까요? 나를 변화시키는 장면, 그리고 나로 인하여 변할 수 있는 누군가. 세상에 어떠한 행동도 헛되이 이루어지는 행동은 없습니다. 그 한 사람의 변화를 만나보세요. 그리고 당신의 소중한 시간에 의미를 담아보세요.</p>
           </div>
         </div>
 
