--- a/organizers.html
+++ b/organizers.html
@@ -80,13 +80,13 @@
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/organizers/2017/dbscofla.jpg" class="img-circle center-block">
-              <p class="center-block">윤채림<br>BIO 16</p>
+              <p class="center-block">윤채림<br>LIFE 16</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/organizers/2017/dlwngus.jpg" class="img-circle center-block">
-              <p class="center-block">이주현<br>BIO 16</p>
+              <p class="center-block">이주현<br>LIFE 16</p>
             </div>
           </div>
         </div>
@@ -107,13 +107,13 @@
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/organizers/2017/chltnwl.jpg" class="img-circle center-block">
-              <p class="center-block">최수지<br>BIO 16</p>
+              <p class="center-block">최수지<br>LIFE 16</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/organizers/2017/chlgPdnjs.jpg" class="img-circle center-block">
-              <p class="center-block">최혜원<br>BIO 16</p>
+              <p class="center-block">최혜원<br>LIFE 16</p>
             </div>
           </div>
         </div>
