--- a/organizers.html
+++ b/organizers.html
@@ -95,7 +95,7 @@
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/organizers/2017/dlghwjd.jpg" class="img-circle center-block">
-              <p class="center-block">이호정<br>PCE 15</p>
+              <p class="center-block">이호정<br>CHEM 15</p>
             </div>
           </div>
           <div class="col-xs-3">
