--- a/register.html
+++ b/register.html
@@ -85,7 +85,7 @@
                 <td colspan="2">***TEDx talks는 초청된 연사들의 강연하는 시간을 의미.</td>
               </tr>
               <tr>
-                <td colspan="2">****After Party 참가비는 5,000원으로, 총학생회 정회원의 경우 무료입니다.</td>
+                <td colspan="2">****After Party 참가비는 5,000원입니다.</td>
               </tr>
               <tr>
                 <td colspan="2">****After Party는 C5 컨퍼런스 홀에서 진행되며 연사와 참가자간의 Q&A와 참가자간의 아이스브레이킹 등이 준비되어 있습니다.</td>
